--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="container">
             <ul id="box"></ul>
             <div class="coninput">
-                <input type="text" name="name" id="name" class="input">
+                <input type="text" name="name" placeholder="Enter your task"  id="name" class="input">
                 <input type="button" value="Add" id="btnclick" class="btn" onclick="addmore()">
 
             </div>
